// import 'package:flutter/material.dart';

// Widget emergencyContactLabel(BuildContext context, bool isEmergencyContact) =>
//                    Container(
//                 padding: const EdgeInsets.only(left: 20),
//                 width: double.infinity,
//                 height: 45,
//                 decoration: BoxDecoration(
//                   color: Theme.of(context).colorScheme.primaryContainer,
//                   borderRadius: BorderRadius.circular(10),
//                 ),
//                 alignment: Alignment.centerLeft,
//                 child: Text(
//                   isEmergencyContact
//                       ? 'Remove from emergency contacts'
//                       : 'Add to emergency contacts',
//                   style: TextStyle(
//                       color: isEmergencyContact
//                           ? Colors.red
//                           : Colors.blue,
//                       fontSize: 17),
//                 ),
//               );
